cmake_minimum_required(VERSION 3.10)
project(learn_vulkan LANGUAGES CXX VERSION 1.0.0)
add_library(cxx_std INTERFACE)
target_compile_features(cxx_std INTERFACE cxx_std_20)

add_executable(vulkan_test main.cpp)
target_include_directories(vulkan_test PUBLIC "Dependencies/glfw/include")
target_link_directories(vulkan_test PUBLIC "Dependencies/glfw/lib-mingw-w64")
target_include_directories(vulkan_test PUBLIC "Dependencies/VulkanSDK/1.3.250.1/Include")
target_link_directories(vulkan_test PUBLIC "Dependencies/VulkanSDK/1.3.250.1/Lib")
target_link_libraries(vulkan_test PUBLIC cxx_std glfw3 vulkan-1)
